css/style.css
@import url(https://fonts.googleapis.com/css?family=Roboto+Slab);

img {
  image-orientation: from-image !important;
}

#slideshow {
  margin: 50px auto;
  position: relative;
  width: 100%;
  height: 560px;
  padding: 10px;
  box-shadow: 0 0 20px rgba(0,0,0,0.4);
  overflow:hidden;
}

@media only screen and (max-width: 600px) {
  #slideshow {
    height: 220px !important;
  }
}

#slideshow > div {
  position: absolute;
  top: 10px;
  left: 10px;
  right: 10px;
  bottom: 10px;
}

.slideshowImg {
  height: 540px;
  width: 960px !important;
  margin-left: 25%;
}

@media only screen and (max-width: 600px) {
  .slideshowImg {
    width: 100% !important;
    height: auto !important;
    margin-left: 0% !important;
  }
}

.cursiveWriting {
  font-family: Apple Chancery;
}

.hidden-text1 {
  color: black;
}

.hidden-text2 {
  color: black;
}

.hidden-text3 {
  color: black;
}

.hidden-text4 {
  color: black;
}

.hidden-text5 {
  color: black;
}

.hidden-text6 {
  color: black;
}

.actualLink {
  color: rgb(0,150,255) !important;
}

p {
  color: black !important;
}

.actualLink:hover {
  color: rgb(0,10,255) !important;
}

a {
  display: inline-block !important;
  position: relative !important;
  white-space: nowrap !important;
}

mark {
  background-color: rgba(0,0,0,0.7);
  color: white;
  border-radius: 1em;
  padding-left: 0.5em;
  padding-right: 0.5em;
  text-transform: uppercase;
}

.introCaptionContainer {
  width: 100%;
  margin-top: 8em !important;
  border-radius: 1em;
}

.introCaption {
  width: 100% !important;
  text-transform: uppercase !important;
  text-align: center !important;
  color: white !important;
  padding-right: 1em;
  padding-left: 1em;
  font-size: 1.2em;
  border-radius: 1em;
  display:inline-block !important;
}

@media only screen and (max-width: 600px) {
  .introCaption {
    font-size: 4px !important;
  }
}

.break {
  text-align: center;
}

.mini-preview-wrapper {
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  position: absolute;
  overflow: hidden;
  z-index: -1;
  opacity: 0;
  margin-top: -4px;
  border: solid 1px #000;
  box-shadow: 4px 4px 6px rgba(0, 0, 0, .3);
  transition: z-index steps(1) .3s, opacity .3s, margin-top .3s;
}

a:hover .mini-preview-wrapper {
  z-index: 2;
  opacity: 1;
  margin-top: 6px;
  transition: opacity .3s, margin-top .3s;
}

.mini-preview-loading, .mini-preview-cover {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
}

.mini-preview-loading {
  display: table;
  height: 100%;
  width: 100%;
  font-size: 1.25rem;
  text-align: center;
  color: #f5ead4;
  background-color: #59513f;
}

.mini-preview-loading::before {
  content: 'Loading...';
  display: table-cell;
  text-align: center;
  vertical-align: middle;
}

.mini-preview-cover {
  background-color: rgba(0, 0, 0, 0); /* IE fix */
}

.mini-preview-frame {
  border: none;
  -webkit-transform-origin: 0 0;
  transform-origin: 0 0;
}

#p1 {
}

.container {
/*  overflow: hidden;
*/}


.sideProjContainer {
  width: 100%;
  margin: 0px !important;
  overflow: hidden !important;
  padding: 0px !important;
}

.hidden-text {
  width: 80%;
  margin: 0 auto;
  margin-top: 20px;
  overflow: hidden;
  font-size: 20px;
}

.tableContainer {
  overflow-y: auto;
  border: 1px solid black;
  border-radius: 0.5em;
  height: 670px;
  width: 100%;
  line-height: 1em;
}

.tableContainer::-webkit-scrollbar {
  -webkit-appearance: none;
}

.tableContainer::-webkit-scrollbar:vertical {
  width: 11px;
}

.tableContainer::-webkit-scrollbar-thumb {
  border-radius: 8px;
  border: 2px solid white; /* should match background, can't be transparent */
  background-color: rgba(0, 0, 0, .5);
}

.contactText {
  font-size: 20px;
}

@media only screen and (max-width: 600px) {
  .table {
    width: 100% !important;
    overflow: hidden !important;
  }

  section {
    overflow: hidden !important;
  }
}

/** {
  overflow: hidden;
}*/

/*======================================
//--//-->   STYLES GENERALES
======================================*/

body {
  background-color: #f5f5f5;
  color: #4e4e4e;
  overflow: scroll !important;
}

html {
  overflow: scroll !important;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: #1e1e1e;
}

a {
  color: #1e1e1e;
  transition: all 0.5s ease-in-out;
}

a:hover {
  color: #0078ff;
  text-decoration: none;
  transition: all 0.5s ease-in-out;
}

td {
  color: black;
}


button:focus,button:active {
   outline: none !important;
   box-shadow: none;
}

.readMoreBtn {
  box-shadow: none;
  border: none;
  outline: none;
  cursor: pointer;
  background: #ddd;
  padding: 10px;
  font-weight: 700;
  margin-top: 20px;
  width:100%;
}
.readMoreBtn:hover {
  background: #d0d0d0;
}

.importantTableCell  {
  background-color: rgb(230, 231, 252);
  font-weight:bold;
}

.gradeCellName {
  text-align: center;
  font-weight:bold;
  background-color: rgb(189, 192, 255);
  color: black;
}

.sideProjectLink {
  margin-top: 20px;
  color: black;
}

.sideProjectDescription {
  margin-top: 20px;
  font-size: 22px;
  color: black;
}

.sideProjects {
  width: 100%;
}

.sideProject {
  padding-left: 10px;
  padding-right: 10px;
  width: 100%;
}

.p-r {
  position: relative;
}

.color-a {
  color: #0078ff;
}

.color-d {
  color: #f5f5f5;
}

.color-text-a {
  color: #4e4e4e;
}

.box-shadow,
.paralax-mf,
.service-box,
.work-box,
.card-blog {
  box-shadow: 0 13px 8px -10px rgba(0, 0, 0, 0.1);
    overflow: visible !important;
}

.box-shadow-a,
.button:hover {
  box-shadow: 0 0 0 4px #cde1f8;
}

.display-5 {
  font-size: 2.5rem;
  font-weight: 300;
  line-height: 1.1;
}

.display-6 {
  font-size: 2rem;
  font-weight: 300;
  line-height: 1.1;
}

.avatar {
  width: 32px;
  height: 32px;
  margin-right: 4px;
  overflow: hidden;
}

.bg-image {
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  background-position: center center;
}

.overlay-mf {
  background-color: #0078ff;
}
/* ... */

